--- a/Flutter Apps/fuark_bank/pubspec.yaml
+++ b/Flutter Apps/fuark_bank/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   get_it: ^9.0.5
   firebase_core: ^4.2.1
   firebase_auth: ^6.1.2
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
