--- a/MockTests/3 - Go Skiing (Mundial)/go_skiing/pubspec.yaml
+++ b/MockTests/3 - Go Skiing (Mundial)/go_skiing/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sensors_plus: ^7.0.0
   audioplayers: ^6.5.1
   vibration: ^3.1.5
+  just_audio: ^0.10.5
 
 dev_dependencies:
   flutter_test:
