MockTest[feat]: Go Skiing
Ranking

--- a/MockTests/3 - Go Skiing (Mundial)/go_skiing/pubspec.yaml
+++ b/MockTests/3 - Go Skiing (Mundial)/go_skiing/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   audioplayers: ^6.5.1
   vibration: ^3.1.5
   just_audio: ^0.10.5
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,7 @@ flutter:
     - assets/images/
     - assets/audio/
     - assets/icons/
+    - assets/data/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
