--- a/MockTests/4 - WorldSkills Events/ws_events/pubspec.yaml
+++ b/MockTests/4 - WorldSkills Events/ws_events/pubspec.yaml
@@ -95,3 +95,9 @@ flutter_launcher_icons:
   ios: true
   remove_alpha_ios: true
   image_path: "assets/images/logo_worldskills.png"
+
+flutter_native_splash:
+  android: true
+  ios: true
+  color: "#ffffff"
+  image: "assets/images/logo_worldskills.png"
