--- a/MockTests/6 - FitTrack/fittrack/pubspec.yaml
+++ b/MockTests/6 - FitTrack/fittrack/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.6.0
+  flutter_launcher_icons: ^0.14.4
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/fittrack.png"
 
 dev_dependencies:
   flutter_test:
