--- a/MockTests/7 - Aero/aero/pubspec.yaml
+++ b/MockTests/7 - Aero/aero/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.6.0
   flutter_launcher_icons: ^0.14.4
+  file_picker: ^10.3.10
 
 flutter_launcher_icons:
   remove_alpha_ios: true
